--- a/Pacman - RetroRush/Vikings.vcxproj
+++ b/Pacman - RetroRush/Vikings.vcxproj
@@ -116,8 +116,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Users\lluccib\Desktop\raylib\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\lluccib\Desktop\raylib\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\raylib\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\raylib\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
