--- a/PacMan RetroRush/pacman/pacman.vcxproj
+++ b/PacMan RetroRush/pacman/pacman.vcxproj
@@ -80,8 +80,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Lluc Cid\Desktop\CITM\Segon Curs\Projecte 1\raylib\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Lluc Cid\Desktop\CITM\Segon Curs\Projecte 1\raylib\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\raylib\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\raylib\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
