--- a/PacMan RetroRush/pacman/pacman.vcxproj
+++ b/PacMan RetroRush/pacman/pacman.vcxproj
@@ -85,8 +85,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Users\Lara\Documents\raylib\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Lara\Documents\raylib\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\raylib\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\raylib\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
